Fix operator image aspect ratio to 4:3 on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -1460,7 +1460,8 @@ body {
     }
     
     .operator-image {
-        height: 120px;
+        aspect-ratio: 4/3;
+        height: auto;
     }
     
     .operator-main-img {
